<resources>
    <string name="app_name">Location Finder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search for an address..</string>
    <string name="results_text">Found %1$d Locations</string>
    <string name="add_text">Add Location</string>

    <string name="name_edit_prompt">Address of Location:</string>
    <string name="name_edit_hint">Some Address</string>

    <string name="lat_txt">Latitude</string>
    <string name="long_txt">Longitude</string>
    <string name="lat_long_hint">00.0000</string>

    <string name="grab_loc">Get Current</string>

    <string name="update_btn">Save</string>
    <string name="delete_btn">Delete</string>
    <string name="create_btn">Create</string>
    <string name="cancel_btn">Cancel</string>

    <string name="lat_fmt">Latitude: %1$d</string>
    <string name="long_fmt">Longitude: %1$d</string>

</resources>